# Hyper-NixOS

./: .gitignore  .gitignore-ip-protection  .pre-commit-config.yaml  .production-release-files  .shellcheckrc  .yamllint  ACTIONABLE_FIXES.md  ADMIN_MENU_STRUCTURE.md  ADVANCED-PATTERNS-INTEGRATION-GUIDE.md  AI-Development-Best-Practices.md  ALL_FIXES_COMPLETE.md  AUDIT-RESULTS.md  AUDITD_FIX_SUMMARY_2025-10-16.md  AUDIT_ACTION_PLAN.md  AUDIT_INDEX.md  AUDIT_QUICK_REFERENCE.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUDIT_SUMMARY_FOR_USER.md  AUTHORS.md  BEFORE_AND_AFTER.md  BOOTSTRAP_FIX_SUMMARY.md  BOOT_BEHAVIOR_FIXED.md  BOOT_FIX_GUIDE.md  BOOT_HANG_FIX_SUMMARY.md  BRANDING_IMPLEMENTATION_REPORT.md  BRANDING_STANDARDS.md  BUG_FIX_COMPLETE_REPORT.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHANGELOG_ENTRY.md  CHANGES_IMPLEMENTED.md  CHANGES_SUMMARY.md  CHECKLIST_COMPLETE.md  CODE_HYGIENE_IMPROVEMENTS_2025-10-13.md  COMPLETE_FEATURES_AND_SERVICES.md  COMPLETE_INSTALLER_AUDIT_SUMMARY.md  COMPLETE_INSTALLER_FIXES_2025-10-16.md  COMPLETE_NETWORK_IMPLEMENTATION_2025-10-16.md  COMPLETE_NETWORK_STACK_2025-10-16.md  (+138 more)
.agent/: GLOBAL-RULES.md  PROJECT-PRD.md
.cache/: phoronix_6_18_kvm.html
.claude/: CLAUDE.md  settings.local.json
api/: go.mod  go.sum  main.go
config/: .production-release-files  README.md  hypervisor.toml
configs/: README.md
configuration/: alerting.nix  automation.nix  backup.nix  cache-optimization.nix  centralized-logging.nix  config.json  configuration.nix  enterprise-features.nix  gui-local.example.nix  hardware-input.nix  minimal-bootstrap.nix  monitoring.nix  profile-headless.nix  profile-management.nix  resource-quotas.nix  security-production.nix  security-production.nix.backup  security.nix  storage-quotas.nix  vm_profile.schema.json  web-dashboard.nix
dev-reference/: ALL_PHASES_COMPLETE.md  AUDIT_SUMMARY.md  CI_CD_FIXES_COMPLETE.md  CI_FIX_SUMMARY.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  DELIVERED.txt  DEPLOYMENT_READY_v2.1.md  DOCUMENTATION_STRUCTURE.md  ENTERPRISE_FEATURES_SUMMARY.md  FINAL_STATUS.txt  (+28 more)
tools/isoctl/: Cargo.toml
tools/isoctl/src/: main.rs
tools/rust-lib/: Cargo.toml
tools/rust-lib/src/: lib.rs  vm.rs
(+1221 files in other folders)
