[package]
name = "hypervisor-lib"
version = "0.1.0"
edition = "2021"
authors = ["MasterofNull"]
license = "GPL-3.0"
description = "Core library for Hyper-NixOS operations"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = "0.14"

# System interaction
nix = { version = "0.27", features = ["user", "process", "signal"] }
procfs = "0.16"
sysinfo = "0.30"

# VM management
virt = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "time"] }

# Networking
tonic = "0.10"
prost = "0.12"
tower = "0.4"
hyper = "0.14"

# Security
ring = "0.17"
rustls = "0.22"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
dashmap = "5.5"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.3"
mockall = "0.12"

[build-dependencies]
tonic-build = "0.10"

[[bench]]
name = "vm_operations"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true